client/style.css
/***
* Global
***/
.app {
    max-width: 1400px;
    margin: 0 auto;
}

.btn:hover {
    cursor: pointer;
}

.link-block {
    display: block;
}

.left {
    float: left;
}

.right {
    float: right;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

/**
* Header
 */
header {
    max-width: 1400px;
    margin: 0 auto;
    box-shadow: 0 1px 10px 5px rgba(0, 0, 255, 0.1);
    background-color: #f5f5f5;
}

header .nav-link {
    padding: 0.1rem 1rem !important;
}

a.nav-link {
    color: black;
    font-variant-caps: all-petite-caps;
    font-weight: bold;
    font-size: 1.2rem;
    text-align: center;

}

a.nav-link:hover, a.nav-link.active {
    background: #283593;
    border-radius: 25px;
    color: white !important;
}

.navbar-collapse {
    flex-basis: 40%;
}

@media screen and (max-width: 992px) {
    .navbar-collapse {
        flex-basis: 100%;
    }
}

.navbar-expand-lg {
    justify-content: space-between;
}

.navbar-expand-lg .navbar-nav {
    justify-content: space-evenly;
    flex: 1;
}

/**
 * Main area
 */

.app-content {
    margin-top: 200px;
    margin-bottom: 100px;
}

/**
 * Footer
 */
footer {
    background: linear-gradient(to right, #457fca, #5691c8);
    min-height: 200px;
}

.footer-links-container {
    display: flex;
    padding: 25px 100px 50px;
    flex-wrap: wrap;
}

.footer-links-container > div:not([class='footer-jargon']) {
    margin-bottom: 40px;
    margin-right: 2%;
    min-width: 110px;
    flex-basis: 18%;
}

.footer-title {
    display: block;
    /*margin-bottom: 15px;*/
    font-weight: bold;
    color: ghostwhite;
}

.footer-jargon {
    flex-basis: 37%;
    padding-right: 70px;
    margin-bottom: 40px;
}

footer a, footer a:hover {
    color: ghostwhite;
}

.footer-social-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
}

.footer-social-container i {
    text-align: center;
    height: 20px;
    width: 20px;
    margin-right: 4%;
    cursor: pointer;
    -webkit-transition: color 0.2s linear;
    -moz-transition: color 0.2s linear;
    -ms-transition: color 0.2s linear;
    -o-transition: color 0.2s linear;
    transition: color 0.2s linear;
}

.footer-social-container i:hover {
    color: ghostwhite;
}

/***
* Registration and login form 
****/

.form-container {
    display: flex;
    justify-content: center;
}

.form-signup, .form-login {
    box-shadow: 0 0 5px grey;
    border-radius: 5px;
    flex-basis: 60%;
    padding: 10px;
    min-width: 225px;
    max-width: 400px;
}

/**
 Single job display START
 */

/*New start*/
.card {
    margin: 15px 0;
}

.job-bar {
    display: flex;
    /*   flex-direction:column; */
    align-items: center;
    border-radius: 5px;
    border: 1px groove lightgrey;
    margin-left: 0px;
    margin-right: 0px;
    cursor: pointer;
    text-align: center;
    /*   width:100%; */
}

.job-bar:hover {
    box-shadow: 0 2px 1px 1px grey;
}

.job-bar > div:not(:first-child) {
    text-align: center;
}

.title {
    min-width: 213px;
}

.panel-job-detail {
    padding: 20px;
}

/*New end*/

/*Old*/
.buttons {
    flex-basis: 100%;
    display: flex;
    justify-content: space-between;
}

#btn-status {
    flex-basis: 30%;
    display: flex;
    justify-content: space-evenly;
}

#btn-status .btn {
    margin-left: 10px;
}

.applied {
    background: lightgreen;
}

.options .dropdown-menu {
    min-width: unset;
    padding: 0.25rem 1rem;
}

.job-detail-block {
    display: flex;
}

.job-desc {
    flex-basis:70%;
    margin: 10px 0 0;
    border-bottom: slategrey solid 1px;
    max-height: 300px;
    overflow: scroll;
    color: #6C7A89;
}

.job-desc:hover {
    box-shadow: 0 0 10px #4D8FAC;
    cursor: pointer;
}

.full-description {
    max-height: 900px;
}

.zmdi-star-outline {
    cursor: pointer;
    color: #FFB61E;
}

.zmdi-star {
    cursor: pointer;
    color: #FFB61E;
}

.job-misc {
    flex-basis:30%;
    margin:10px 0 0;
    padding-left: 20px;
    max-width:30%;
}

.job-misc .contact,
.job-misc .salary,
.job-misc .deadline,
.job-misc .company,
.job-misc .location{
    margin-bottom: 10px;
}

.job-misc .deadline,
.job-misc .company,
.job-misc .location{
    display:none;
}

.contact i::after, .salary i::after,
.deadline i::after, .company i::after,
.location i::after{
    content: ' ';
    white-space: pre;
}






@media screen and (max-width: 576px){
    .job-misc .deadline,
    .job-misc .company,
    .job-misc .location{
        display:block;
    }

    .deadline,
    .company,
    .location{
        display:none;
    }

    .job-detail-block {
        flex-direction: column;
    }

    .job-misc {
        flex-basis:100%;
        padding-left:0;
        max-width: none;
    }
}


@media screen and (max-width: 680px) {

    .footer-links-container {
        padding: 25px 50px 50px;
        text-align: center;
    }

    .footer-links-container > div {
        margin-right: 0 !important;
        flex-basis: 100% !important;
        padding: 0 !important;
    }

    .job-block {
        flex-wrap: wrap;
    }

    .left, .right {
        flex-basis: 100%;
    }

    .right {
        padding: 0;
    }

    .buttons {
        justify-content: space-between;
    }

}

/**
 Single job display END*/

